
[project]
name = "ocpsvg"
readme = "readme-pypi.md"
version = "0.3.4"
requires-python = ">=3.9"
dependencies = [
    "cadquery-ocp >= 7.7.0, <7.8",
    "svgelements >= 1.9.1, <2",
]


[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.report]
exclude_also = [
    "\\s+\\.\\.\\.",
]
