
[project]
name = "ocpsvg"
readme = "readme-pypi.md"
version = "0.4.0"
requires-python = ">=3.10"
dependencies = [
    "cadquery-ocp >= 7.8.1, < 7.9.0",
    "svgelements >= 1.9.1, <2",
]


[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.report]
exclude_also = [
    "\\s+\\.\\.\\.",
]
